Putting in echo command to say that this is feature5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@
        - image: circleci/golang:1.13.4-stretch
      steps:
        - checkout
-       - run: echo "feature5"
+       - run: echo "feature5 branch"
        - run: echo $foo1
        - *restore-godel-cache
        - run: ./godelw version
