Putting in echo command to say that this is feature5 and commenting out godel version command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@
        - run: echo "feature5 branch"
        - run: echo $foo1
        - *restore-godel-cache
-       - run: ./godelw version
+#       - run: ./godelw version
        - *save-godel-cache
        - run: ./godelw build
        - persist_to_workspace:
