Putting in echo command to say that this is feature5 and commenting out godel version and run commands

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@
        - *restore-godel-cache
 #       - run: ./godelw version
        - *save-godel-cache
-       - run: ./godelw build
+#       - run: ./godelw build
        - persist_to_workspace:
            root: .
            paths:
