Putting in echo command to say that this is feature5 and commenting out godel version, run and persist to workspace commands

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,10 +70,10 @@
 #       - run: ./godelw version
        - *save-godel-cache
 #       - run: ./godelw build
-       - persist_to_workspace:
-           root: .
-           paths:
-             - build/bulldozer
+#       - persist_to_workspace:
+#           root: .
+#           paths:
+#             - build/bulldozer
 
    automated-tests:
      working_directory: /go/src/github.com/palantir/bulldozer
