Putting in echo command to say that this is feature5 and commenting out godel commands in build and automated tests jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,11 +84,11 @@
      steps:
        - checkout
        - run: echo "This is the automated-tests job"
-       - *restore-godel-cache
-       - run: ./godelw version
-       - *save-godel-cache
+#       - *restore-godel-cache
+#       - run: ./godelw version
+#       - *save-godel-cache
        - run: mkdir -p "${TESTS_DIR}"
-       - run: ./godelw verify --apply=false --junit-output="$TESTS_DIR/$CIRCLE_PROJECT_REPONAME-tests.xml"
+#       - run: ./godelw verify --apply=false --junit-output="$TESTS_DIR/$CIRCLE_PROJECT_REPONAME-tests.xml"
        - *store-results
        - *store-artifacts
 
