Putting in echo command to say that this is feature5 and commenting out godel commands in build and automated tests jobs and commenting out EKS jobs and create deployment branch job out of workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,8 +201,8 @@
 #           cluster-name: prod-clone3
 #           requires:
 #             - test-code-on-K8S
-       - create-deploy-branch:
-           filters: { tags: { only: /.*/ } }
+#       - create-deploy-branch:
+#           filters: { tags: { only: /.*/ } }
 #           requires:
 #            - aws-eks/delete-cluster
 #            - test-code-on-K8S
